src/objects/DFSS_Permissions__c.object
<CustomObject>
    <description>DreamFactory SnapShot Permissions Management</description>
    <fields>
        <fullName>Data__c</fullName>
        <description>Main field for Permissions data</description>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Over__c</fullName>
        <description>Overflow field for Permissions data</description>
        <label>Over</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User to whom these permissions are applied</description>
        <inlineHelpText>User to whom these permissions are applied</inlineHelpText>
        <label>User Link</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SnapShot_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SnapShot Permissions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Snapshot Permissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapShot Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>